# hierarchical-classification

./: .gitignore  README.md  pyproject.toml
entrypoint/: __main__.py
lib/ann/: __init__.py  ann.py
lib/clustering/: __init__.py  clustering.py
lib/data/: __init__.py  data.py
lib/metrics/: __init__.py  metrics.py
