[tool.poetry]
name = "hierarchical-classification"
version = "0.1.0"
description = ""
authors = ["Andre Fernandes <andre.b.fernandes@farfetch.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sklearn = "^0.0"
tqdm = "^4.62.3"
tensorflow-hub = "^0.12.0"
tensorflow = "^2.6.0"
pandas = "1.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
